[tool.poetry]
name = "vss365today-finder"
version = "2.0.1"
description = "#vss365 today prompt tweet finder service"
authors = ["Caleb Ely <le717@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.10.4"
tweepy = "^4.14.0"
sys-vars = "^5.0.0"
pytz = "^2023.3"
py7zr = "^0.20.6"
httpx = "^0.24.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5"
black = "^23.9"
types-pytz = "^2023.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
